Issue #10421 remove unknow module warning
Signed-off-by: Olivier Lamy <olamy@apache.org>